--- a/education.html
+++ b/education.html
@@ -2,7 +2,7 @@
 <html lang="en" light-mode="dark">
 
 <head>
-    <title>Md Mubashir Khan | Education</title>
+    <title>Mohd Umar Ansari | Education</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="free portfolio template,portfolio template, portfolio website template, open source, open sourcing, contributing to open source" />
@@ -293,7 +293,7 @@
         <div>
             <h2 class="timelineHeading">RGPV University</h2>
             <h6>Bachelor of Technology, Computer Science</h6>
-            <li>CGPA: 6.89</li>
+            <li>CGPA: 6.62</li>
         </div>
       </div>
     </div>
@@ -309,7 +309,7 @@
         <div class="alignment">
             <h3 class="timelineHeading2">Board of Higher Secondary Education, Madhya Pradesh</h3>
             <h6>10+2 (Senior Secondary)</h6>
-            <li>Percentage: 74.3%</li>
+            <li>Percentage: 72%</li>
         </div>
       </div>
     </div>
@@ -323,7 +323,7 @@
         <div class="align-third">
             <h2 class="timelineHeading3">Board of Secondary Education, Madhya Pradesh</h2>
             <h6>10th (Secondary)</h6>
-            <li>Percentage: 74%</li>
+            <li>Percentage: 72%</li>
         </div>
       </div>
     </div>
